[tool.poetry]
name = "togawil"
version = "0.1.0"
description = ""
authors = ["Tomas Gustavsson <tomplast@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <=3.12"
toga = "^0.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-coverage = "^0.0"
mypy = "^1.6.0"
radon = "^6.0.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
