[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "togax-wil"
dynamic = ["version"]
description = 'Load Toga widgets from YAML like format'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Tomas Gustavsson", email = "tomplast@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["toga==0.4.1"]

[project.urls]
Documentation = "https://github.com/tomplast/togax_wil#readme"
Issues = "https://github.com/tomplast/togax_wil/issues"
Source = "https://github.com/tomplast/togax_wil"

[tool.hatch.version]
path = "src/togax_wil/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.9", "3.10", "3.11", "3.12"]

[[tool.hatch.envs.test.matrix]]
python = ["3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/togax_wil tests}"

[tool.coverage.run]
source_pkgs = ["togax_wil", "tests"]
branch = true
parallel = true
omit = [
  "src/togax_wil/__about__.py",
]

[tool.coverage.paths]
togax_wil = ["src/togax_wil", "*/togax_wil/src/togax_wil"]
tests = ["tests", "*/togax_wil/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
